# pipelex-mcp

./: .env.example  .gitignore  .mcp.json  404.html  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  index.html  mcp.json  mkdocs.yml  pipelex.toml  pyproject.toml  sitemap.xml
.cursor/: mcp.json
.github/workflows/: cla.yml  deploy-docs.yml  doc-check.yml  github-release.yml  tests-check.yml
.pipelex/: pipelex.toml
.pipelex/inference/: backends.toml
CODE_OF_CONDUCT/: index.html
changelog/: index.html
contributing/: index.html
docs/: index.md
license/: index.html
pipelex_libraries/pipelines/: macot_generation.toml
pipelex_mcp/: server.py
pipelex_mcp/pipelex_libraries/pipelines/base_library/: questions.py  retrieve.py
search/: search_index.json
server/: exceptions.py  helpers.py  inputs_handler.plx  inputs_handler.py  main.py  server.py
tests/: conftest.py
